--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   Publish:
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    # runs-on: buildjet-4vcpu-ubuntu-2204-arm
     permissions:
       contents: read
       packages: write
