--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -1,10 +1,16 @@
 name: Publish to GHCR
 
-on: workflow_dispatch
+on: 
+  push:
+    branches: [ "main" ]
+    # Publish semver tags as releases.
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   Publish:
-    # runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     permissions:
       contents: read
       packages: write
