--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,31 +1,31 @@
-# name: Test and deploy server and webapp
+name: Test and deploy server and webapp
 
-# on:
-#   push:
-#     branches: [master]
+on:
+  push:
+    branches: [master]
 
-# jobs:
-#   test:
-#     name: Run tests
-#     uses: mcndt/noteshare.space/.github/workflows/test.yaml@master
-#   deploy:
-#     name: Deploy
-#     needs: [test]
-#     environment:
-#       name: production
-#       url: https://noteshare.space
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Deploy using ssh
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.DEPLOY_HOST }}
-#           username: ${{ secrets.DEPLOY_USER }}
-#           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
-#           port: 22
-#           script_stop: true
-#           script: |
-#             cd /home/noteshare/noteshare.space
-#             git pull origin master
-#             docker compose -f docker-compose.server.yml build
-#             docker compose -f docker-compose.server.yml up -d
+jobs:
+  test:
+    name: Run tests
+    uses: mcndt/noteshare.space/.github/workflows/test.yaml@master
+  deploy:
+    name: Deploy
+    needs: [test]
+    environment:
+      name: production
+      url: https://noteshare.space
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy using ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
+          port: 22
+          script_stop: true
+          script: |
+            cd /home/noteshare/noteshare.space
+            git pull origin master
+            docker compose -f docker-compose.server.yml build
+            docker compose -f docker-compose.server.yml up -d
