--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -15,7 +15,7 @@ jobs:
   publish:
     name: Publish
     needs: [test]
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
