--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -7,6 +7,12 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [master]
+
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
   
 jobs:
   test:
